--- a/static/index.html
+++ b/static/index.html
@@ -12,11 +12,7 @@
       <input type="text" id="memo-input" placeholder="뭐라도 써봐라" required />
       <button id="memo-submit" type="submit">생성</button>
     </form>
-    <ul>
-      <li>1번</li>
-      <li>2번</li>
-      <li>3번</li>
-    </ul>
+    <ul id="memo-ul"></ul>
     <script src="app.js"></script>
   </body>
 </html>
